--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^149.0.0",
     "langchain": "^0.3.27",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
