--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.57",
     "@langchain/google-genai": "^0.2.10",
+    "@langchain/openai": "^0.5.11",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
